# EdgePowerMeter

./: .gitignore  EdgePowerMeter.ino  README.md  build.py  pyproject.toml  run.py
.github/workflows/: release.yml
Manufacture/: BOM.csv  EdgePowerMeter_EasyEDA.json  PickAndPlace.csv
Schematics/: EdgePowerMeter.fzz  EdgePowerMeter_bom.csv
app/: __init__.py  main.py  version.py
app/core/: __init__.py  cpu_monitor.py  harmonic_analysis.py  measurement.py  power_supply_quality.py  settings.py  statistics.py
app/export/: __init__.py  csv_importer.py  pdf_report.py
app/serial/: __init__.py  config.py  handler.py  parser.py  reader.py  sampler.py  serial_reader.py
app/ui/: __init__.py  main_window.py  report.py  settings.py  theme.py
app/ui/dialogs/: __init__.py  settings_dialog.py
app/ui/theme/: __init__.py  colors.py
app/ui/widgets/: __init__.py  cpu_bar.py  plot_buffers.py  plot_widget.py  port_discovery.py  stat_card.py
assets/icons/: EdgePowerMeter.icns
docs/: BUILD.md  HARDWARE.md  SOFTWARE.md
firmware/: OLEDStatus.cpp  OLEDStatus.h  PrecisionTime.cpp  PrecisionTime.h  firmware.ino
snap/: snapcraft.yaml
snap/local/: edgepowermeter.desktop
