[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgepowermeter"
dynamic = ["version"]
description = "Real-time power monitoring application for embedded AI workloads"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Daniel Rossi"}
]
keywords = ["power", "monitoring", "embedded", "ina226", "esp32", "serial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "pyserial>=3.5",
    "reportlab>=4.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/DanielRossi1/EdgePowerMeter"
Repository = "https://github.com/DanielRossi1/EdgePowerMeter.git"
Issues = "https://github.com/DanielRossi1/EdgePowerMeter/issues"
Documentation = "https://github.com/DanielRossi1/EdgePowerMeter/tree/main/docs"

[project.scripts]
edgepowermeter = "app.main:main"

[project.gui-scripts]
edgepowermeter-gui = "app.main:main"

[tool.setuptools.dynamic]
version = {attr = "app.version.__version__"}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
